--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "laravolt/avatar": "^5.1",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
         "power-components/livewire-powergrid": "^5.4",
