--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.2",
-
-        "pikaday": "^1.8.2"
-
+        "pikaday": "^1.8.2",
         "alpinejs": "^3.14.0"
-
     }
 }
