--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.2",
+        "alpinejs": "^3.14.0",
+        "jquery": "^3.7.1",
         "pikaday": "^1.8.2",
-        "alpinejs": "^3.14.0"
+        "select2": "^4.1.0-rc.0"
     }
 }
