--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "@fortawesome/fontawesome-free": "^6.5.2",
         "alpinejs": "^3.14.0",
         "jquery": "^3.7.1",
-        "pikaday": "^1.8.2",
-        "select2": "^4.1.0-rc.0"
+        "pikaday": "^1.8.2"
     }
 }
